@@ -1,5 +1,10 @@
 2006-03-13  Luc Pionchon  <luc.pionchon@nokia.com>
 
+	* hildon-widgets/hildon-dialoghelp.c: minor cleanups
+
+	
+2006-03-13  Luc Pionchon  <luc.pionchon@nokia.com>
+
 	* hildon-widgets/hildon-font-selection-dialog.c
 	(hildon_font_selection_dialog_show_preview): set line wrap for
 	preview label.
